# bootcamp-ecommerce

./: .babelrc  .coveragerc  .dockerignore  .env.example  .eslintrc  .flowconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  .stylelintrc.yaml  .travis.yml  .yarnrc  Aptfile  Dockerfile  Dockerfile-nb  Dockerfile-node  Procfile  README.md  RELEASE.rst  app.base.json  app.json  apt.txt  conftest.py  docker-compose-notebook.yml  docker-compose.override.yml  docker-compose.travis.yml  docker-compose.yml  hot-reload-dev-server.js  manage.py  package.json  postcss.config.js  pull_request_template.md  pylintrc  pyproject.toml  pytest.ini  pytest_minimal.ini  repl.py  requirements.in  (+13 more)
.github/workflows/: ci.yml  codeql-analysis.yml  production.yml  release-candiate.yml
applications/: __init__.py  admin.py  api.py  api_test.py  apps.py  conftest.py  constants.py  exceptions.py  factories.py  filters.py  filters_test.py  mail_api.py  mail_api_test.py  models.py  models_test.py  serializers.py  serializers_test.py  signals.py  signals_test.py  tasks.py  tasks_test.py  urls.py  utils.py  views.py  views_test.py
applications/management/: utils.py  utils_test.py
applications/migrations/: 0001_bootcamp_application_models.py  0002_minor_fixes.py  0003_move_review_fields.py  0004_bootcampapplication_resume_upload_date.py  0005_application_multiple_orders.py  0006_change_submission_types.py  0007_remove_videofile.py  0008_bootcampapplication_linkedin_url.py  0009_add_step_default_status.py  0010_add_waitlisted_status.py  0010_applicationstepsubmission_submission_status.py  0011_applicationstepsubmission_submission_status.py  0012_applicantletter.py  0013_applicantletter_types.py  0014_application_refund_status.py  0015_bootcampapplicationline.py
authentication/: api.py  api_test.py  exceptions.py  middleware.py  middleware_test.py  serializers.py  serializers_test.py  strategy.py  strategy_test.py  urls.py  utils.py  views.py  views_test.py
authentication/pipeline/: compliance.py  compliance_test.py  conftest.py  user.py  user_test.py
backends/: edxorg.py  edxorg_test.py  exceptions.py  pipeline_api.py  pipeline_api_test.py  utils.py  utils_test.py
bootcamp/: admin.py  apps.py  apps_test.py  celery.py  context_processors.py  envs.py  envs_test.py  factories.py  models.py  models_test.py  serializers.py  serializers_test.py  settings.py  settings_test.py  urls.py  urls_test.py  utils.py  utils_test.py  views.py  views_test.py  wsgi.py
bootcamp/templates/: 404.html  500.html  background-images.css  base.html  base_error.html  footer.html  gtm_body.html  navbar.html
bootcamp/templatetags/: custom_tag_test.py  render_bundle.py  render_bundle_test.py
cms/: __init__.py  api.py  api_test.py  apps.py  blocks.py  constants.py  factories.py  forms.py  forms_test.py  model_test.py  models.py  models_test.py  serializers.py  serializers_test.py  signals.py  signals_test.py  template_tags_test.py  utils.py  utils_test.py
cms/migrations/: 0001_initial.py  0002_resourcepage.py  0003_bootcamp_product_run_page.py  0004_rename_klass_to_bootcamp_run.py  (+43 more)
compliance/: admin.py  api.py  api_test.py  constants.py  factories.py  models.py  test_utils.py
config/: nginx.conf  nginx.conf.erb
ecommerce/: admin.py  admin_test.py  api.py  api_test.py  apps.py  constants.py  exceptions.py  factories.py  models.py  models_test.py  permissions.py  permissions_test.py  serializers.py  serializers_test.py  tasks.py  tasks_test.py  test_utils.py  urls.py  views.py  views_test.py
fixtures/: common.py  cybersource.py
fluidreview/: __init__.py  admin.py  api.py  api_test.py  apps.py  constants.py  factories.py  models.py  models_test.py  permissions.py  serializers.py  serializers_test.py  signals.py  urls.py  utils.py  views.py  views_test.py
hubspot/: api.py  api_test.py  conftest.py  decorators.py  factories.py  models.py  serializers.py  serializers_test.py  task_helpers.py  task_helpers_test.py  tasks.py  tasks_test.py
hubspot_sync/: api.py  api_test.py  conftest.py  constants.py  serializers.py  serializers_test.py  task_helpers.py  task_helpers_test.py  tasks.py  tasks_test.py
jobma/: admin.py  api.py  api_test.py  apps.py  constants.py  factories.py  models.py  permissions.py  permissions_test.py  urls.py  views.py  views_test.py
klasses/: README.md  __init__.py  admin.py  api.py  api_test.py  apps.py  bootcamp_admissions_client.py  bootcamp_admissions_client_test.py  commands_test.py  conftest.py  constants.py  factories.py  models.py  models_test.py  permissions.py  serializers.py  serializers_test.py  signals.py  signals_test.py  tasks.py  tasks_test.py  urls.py  utils.py  utils_test.py  views.py  views_test.py
mail/: admin.py  api.py  api_test.py  exceptions.py  forms.py  models.py  tasks.py  tasks_test.py  urls.py  utils.py  views.py
main/: admin.py  apps.py  apps_test.py  celery.py  context_processors.py  context_processors_test.py  envs.py  envs_test.py  features.py  features_test.py  hijack_support_middleware.py  middleware.py  middleware_test.py  models.py  models_test.py  negotiations.py  permissions.py  permissions_test.py  sentry.py  serializers.py  serializers_test.py  settings.py  settings_test.py  templatetags_test.py  test_utils.py  test_utils_test.py  urls.py  urls_test.py  utils.py  utils_test.py  views.py  views_test.py  wsgi.py
novoed/: api.py  api_test.py  apps.py  constants.py  tasks.py  tasks_test.py
profiles/: admin.py  api.py  api_test.py  apps.py  constants.py  exceptions.py  factories.py  models.py  models_test.py  serializers.py  serializers_test.py  urls.py  utils.py  utils_test.py  views.py  views_test.py
scripts/: envs.sh  install_yarn.js  repl.js
smapply/: __init__.py  admin.py  api.py  api_test.py  apps.py  factories.py  models.py  permissions.py  serializers.py  serializers_test.py  signals.py  tasks.py  tasks_test.py  urls.py  views.py  views_test.py
travis/: Dockerfile-travis-watch  Dockerfile-travis-watch-build  Dockerfile-travis-web  js_tests.sh  python_tests.sh  update-docker-hub.sh
(+426 files in other folders)
