[tool.black]
py39 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

# settings to make isort compatible with how black formats imports
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88


[tool.poetry]
name = "Bootcamps"
version = "0.108.0"
description = "Bootcamps Ecommerce"
license = "BSD-3"
readme = "README.md"
packages = []
authors  = ["MIT ODL"]

[tool.poetry.dependencies]
python = "3.10.13"
django = "4.2.26"
celery = {extras = ["redis"], version = "^5.3.6"}
boto3 = "^1.16.63"
dj-database-url = "^0.5.0"
django-anymail = {extras = ["mailgun"], version = "^8.4"}
dj-static = "^0.0.6"
django-cache-memoize = "^0.2.0"
django-classy-tags = "^4.1.0"
django-hijack = "^3.4.5"
django-filter = "^23.4"
django-fsm = "^2.8.0"
django-ipware = "^4.0.0"
django-mathfilters = "^1.0.0"
django-redis = "^5.0.0"
django-webpack-loader = "^0.7.0"
djangorestframework = "^3.15.2"
djangorestframework-serializer-extensions = "^2.0.0"
djangosaml2idp = { git = "https://github.com/OTA-Insight/djangosaml2idp.git", rev = "0b4325782a6fd2c034677b5923041b5df10087ec" } # pragma: allowlist secret
dynamic-rest = "^2.1.2"
html5lib = "^1.1"
hubspot-api-client = "^6.1.0"
django-storages = "^1.9.1"
ipython = "^8.10.0"
mitol-django-common = "^2023.12.19"
mitol-django-hubspot-api = "2023.12.19"
mitol-django-mail= "^2023.12.19"
mitol-django-authentication = "^2023.12.19"
newrelic = "^6.2.0.156"
premailer = "^3.7.0"
psycopg2 = "^2.8.6"
pycountry = "^19.8.18"
PyNaCl = "^1.5.0"
python-dateutil = "^2.8.1"
pytz = "^2022.6"
requests= "^2.20"
sentry-sdk = "^2.8.0"
social-auth-app-django = "^5.4.0"
static3 = "^0.7.0"
urllib3 = "^2.0.0"
uwsgi = "^2.0.20"
wagtail = "^5.2.1"
zeep = "^4.2.1"
Pillow = "^10.3.0"
user-util = "^0.3.0"


[tool.poetry.group.dev.dependencies]
astroid = "^2.4.2"
black = "^24.3.0"
bpython = "^0.26"
django-debug-toolbar = "^3.2.4"
hypothesis = "~4.23.9"
ipdb = "^0.13.2"
isort = "^4.3.21"
factory_boy = "^3.2.0"
faker = "^8.8.2"
nplusone = "^1.0.0"
pdbpp = "^0.11.0"
pip-tools = "^7.1.0"
pylint = "~2.17.0"
pylint-django = "~2.5.0"
pytest = "^7.4.4"
pytest-cov = "^2.6.1"
pytest-env = "^0.8.0"
pytest-django = "^4.0.0"
pytest-mock = "^1.10.1"
pytest-pylint = "^0.21.0"
pytest-lazy-fixture = "^0.6.3"
responses = "^0.25.0"
semantic-version = "^2.8.5"
selenium = "^3.141.0"
six = "^1.16.0"
testfixtures = "^6.14.1"
tox = "^3.15.1"
wagtail-factories = "^4.1.0"
